--- a/Pipfile
+++ b/Pipfile
@@ -1,5 +1,4 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
@@ -7,14 +6,14 @@ name = "pypi"
 [packages]
 boto3 = "*"
 aws-xray-sdk = "*"
+flake8 = "*"
+aws-sam-cli = "*"
 
 [dev-packages]
 flake8 = "*"
 autopep8 = "*"
 pydocstyle = "*"
 cfn-lint = "*"
-aws-sam-cli = "*"
-awscli = "*"
 pytest = "*"
 pytest-mock = "*"
 pytest-cov = "*"
